--- a/servers/package.json
+++ b/servers/package.json
@@ -24,8 +24,10 @@
     "@apollo/subgraph": "^2.5.7",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
